--- a/deep-learning-basics/cross_entropy_loss.ipynb
+++ b/deep-learning-basics/cross_entropy_loss.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOQrvD+MDwZKaJzpwbi7F8y",
+      "authorship_tag": "ABX9TyO1Rpur5sf3J1C/S5aWPMcb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +76,7 @@
       ],
       "metadata": {
         "id": "e-wc9uqBoIaE",
-        "outputId": "16eb0640-31d9-4328-bbe0-0cdd83201da5",
+        "outputId": "e4b0b1e2-c2bb-4627-8b31-ff2bb028ab17",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -138,7 +138,7 @@
           "height": 436
         },
         "id": "8Xoa_hqmoJU_",
-        "outputId": "74a15a09-e3cd-48fd-b39e-b677a138a6c9"
+        "outputId": "a67b6611-26ba-425d-b1a3-593e5693f474"
       },
       "execution_count": 2,
       "outputs": [
@@ -174,7 +174,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cXJew-Elo-Uc",
-        "outputId": "a0031841-1596-45c8-d460-c0d3571d4f32"
+        "outputId": "edb2e8e5-efbd-41a5-83fe-3fb87195b854"
       },
       "execution_count": 3,
       "outputs": [
@@ -210,7 +210,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mn6cmEU5pCqB",
-        "outputId": "95a932ef-de3f-43e7-bec8-8a3a24a5f51b"
+        "outputId": "469694aa-6f9b-498d-a0f0-19aa163a5028"
       },
       "execution_count": 4,
       "outputs": [
@@ -245,7 +245,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QnxxQ4VHpHYn",
-        "outputId": "0c22c0c1-92d8-4887-e63b-66374e591146"
+        "outputId": "bd3726ea-e044-4da0-a10f-066ffe719d66"
       },
       "execution_count": 5,
       "outputs": [
@@ -313,7 +313,7 @@
           "height": 481
         },
         "id": "K-xycrwxygI6",
-        "outputId": "bc1153b0-14f6-4bcd-f5a0-3131c1fcdaa9"
+        "outputId": "ed5ae443-fb77-400b-ba17-04fe078fcca6"
       },
       "execution_count": 6,
       "outputs": [
@@ -370,7 +370,7 @@
       "metadata": {
         "id": "kSh1h3w91mIz"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -383,12 +383,12 @@
       ],
       "metadata": {
         "id": "vF_NMDqAuRsF",
-        "outputId": "4451db4d-32fe-4b79-e156-4a6463cc6ea6",
+        "outputId": "3f2bd67d-053f-4014-c046-c0d60dde6351",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -398,7 +398,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -426,7 +426,7 @@
       "metadata": {
         "id": "CbogMIZWvEI9"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -438,12 +438,12 @@
       ],
       "metadata": {
         "id": "adsD_5FlvzXb",
-        "outputId": "ef506c97-c7ab-466a-cf32-07ae8786bafd",
+        "outputId": "eb24fea6-1dbc-4d1b-a6a5-3cc41bb2f7df",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,12 +484,43 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Let’s formalize the setting we’ll consider. In a multiclass classification problem over `N` classes, the class labels are 0, 1, 2 through `N - 1`. The labels are one-hot encoded with 1 at the index of the correct label, and 0 everywhere else.\n",
+        "\n",
+        "For example, in an image classification problem where the input image is one of `{panda, seal, duck}`, the class labels and the corresponding one-hot vectors are shown below.\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-basics/images/c4fcab98feb61898a004853fcf28188020b2ced7-900x506.png?raw=1)\n",
+        "\n",
+        "In multiclass classification, the raw outputs of the neural network are passed through the softmax activation, which then outputs a vector of predicted probabilities over the input classes.\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-basics/images/524b5021d60b6f179fce04a08e775dd85d659d97-900x506.png?raw=1)\n",
+        "\n",
+        "The categorical cross-entropy loss between the true distribution t and the predicted distribution p in a multiclass classification problem with `N` classes is given by:\n",
+        "\n",
+        "$$\n",
+        "L(t, p) = - \\sum_{j=1}^N t_j log(p_j)\n",
+        "$$\n",
+        "\n",
+        "This expression may seem daunting, but we’ll parse this and arrive at a much simpler expression.\n",
+        "\n",
+        "Recall that the true distribution t is a one-hot vector that has 1 at one of the indices and zero everywhere else. If a given image belongs to the class k, in the true distribution vector, `t_k = 1`, and all other indices are zero.\n",
+        "\n",
+        "Substituting as follows,\n",
+        "\n",
+        "$t_k=1$ and $t_j=0$ for $j \\notequal k$"
+      ],
+      "metadata": {
+        "id": "OKUK5ylKXkFk"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
         "id": "GO2XL3U3xUdw"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     }
   ]
