--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/08_contextual_word_embeddings.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/08_contextual_word_embeddings.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOsIaAYn6IUJwbaHDor/chN",
+      "authorship_tag": "ABX9TyMfRYqTTAiSJukl4hol23i7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1482,7 +1482,7 @@
       "metadata": {
         "id": "bPp9LPHbWch9"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1504,12 +1504,12 @@
       ],
       "metadata": {
         "id": "4KaJRDNLmTq_",
-        "outputId": "8cd032c6-2f5a-441e-a3dd-5aa70d8fe330",
+        "outputId": "23219d62-cce7-45ca-abef-77cc5471ed0a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -1556,7 +1556,7 @@
       "metadata": {
         "id": "i9pPl_87mbqd"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1565,33 +1565,10 @@
         "nltk.download('punkt')"
       ],
       "metadata": {
-        "id": "lrnHpAEYgrSS",
-        "outputId": "177b354a-6a65-4841-b43b-f5ecabd22cba",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "lrnHpAEYgrSS"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2813,6 +2790,329 @@
       ],
       "metadata": {
         "id": "xrdcDyHI4A5c"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flair_sentences = [Sentence(s) for s in sentences]\n",
+        "flair_sentences[0]"
+      ],
+      "metadata": {
+        "id": "xRufQS7K5tdt",
+        "outputId": "3d450c10-535a-408e-c722-0a9a94bc6486",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Sentence[58]: \" The Hatter was the first to break the silence. `What day of the month is it?' he said, turning to Alice:  he had taken his watch out of his pocket, and was looking at it uneasily,  shaking it every now and then, and holding it to his ear.\""
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flair_sentences[0].get_token(32)"
+      ],
+      "metadata": {
+        "id": "MBAgtwTw6BzN",
+        "outputId": "68a679c3-2e1c-44f3-8e54-05a1275dc18b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Token[31]: \"watch\""
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flair_sentences[0].tokens[31]"
+      ],
+      "metadata": {
+        "id": "YDFP5A316JdD",
+        "outputId": "4bd0f54e-fad4-43c3-8da3-f9c96c0a68bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Token[31]: \"watch\""
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# load Embeddings\n",
+        "flair_emb = FlairEmbeddings(\"news-forward\")"
+      ],
+      "metadata": {
+        "id": "WnKgpKXj6dwX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flair_emb.embed(flair_sentences)"
+      ],
+      "metadata": {
+        "id": "hzgbyQCH8KGi",
+        "outputId": "38cde176-68b0-4be2-9f26-6ad0bfc0ec35",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Sentence[58]: \" The Hatter was the first to break the silence. `What day of the month is it?' he said, turning to Alice:  he had taken his watch out of his pocket, and was looking at it uneasily,  shaking it every now and then, and holding it to his ear.\",\n",
+              " Sentence[48]: \" Alice thought this a very curious thing, and she went nearer to watch them, and just as she came up to them she heard one of them say, `Look out now, Five!  Don't go splashing paint over me like that!\"]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Let’s check the embeddings for the word \"watch\" in both sentences\n",
+        "token_watch1 = flair_sentences[0].tokens[31]\n",
+        "token_watch2 = flair_sentences[1].tokens[13]\n",
+        "\n",
+        "token_watch1, token_watch2"
+      ],
+      "metadata": {
+        "id": "rUEObLcU8Spo",
+        "outputId": "0b6ef9a6-28d2-4268-87c0-6698e4eb0ee6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(Token[31]: \"watch\", Token[13]: \"watch\")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "token_watch1.embedding, token_watch2.embedding"
+      ],
+      "metadata": {
+        "id": "eoEafKUO8lQb",
+        "outputId": "156ab0d4-e3a9-4469-c31d-684fa69a191b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([-0.0007, -0.0057,  0.0187,  ..., -0.0051, -0.0022,  0.0026]),\n",
+              " tensor([-0.0011, -0.0037,  0.1031,  ..., -0.0079, -0.0044,  0.0002]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let's find out its cosine similarity\n",
+        "similarity = nn.CosineSimilarity(dim=0, eps=1e-6)\n",
+        "similarity(token_watch1.embedding, token_watch2.embedding)"
+      ],
+      "metadata": {
+        "id": "ByK-Ku4780Y7",
+        "outputId": "95d1360e-d437-40a7-c0a3-8b62c3d7f3ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0.5003)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can see that the two words are\n",
+        "not so similar after all. Contextual word embeddings for the win :-)\n",
+        "\n",
+        "To get word embeddings for all tokens in a sentence, we can simply stack them up:"
+      ],
+      "metadata": {
+        "id": "qUpDGCAe-gvb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_embeddings(embeddings, sentence):\n",
+        "  sent = Sentence(sentence)\n",
+        "  embeddings.embed(sent)\n",
+        "  return torch.stack([token.embedding for token in sent.tokens]).float()"
+      ],
+      "metadata": {
+        "id": "5XoOAGWj-2LQ"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "get_embeddings(flair_emb, watch1)"
+      ],
+      "metadata": {
+        "id": "9cgU7k9C_NBQ",
+        "outputId": "d96d41d8-56a6-4ab2-d38c-50aa972aa9c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[-2.0933e-03,  5.0415e-04,  4.6944e-02,  ..., -4.4014e-04,\n",
+              "         -3.9301e-02,  1.0601e-02],\n",
+              "        [ 3.2224e-04,  1.4939e-03,  2.5947e-02,  ..., -9.2416e-04,\n",
+              "         -1.4211e-02,  3.0942e-03],\n",
+              "        [ 1.7407e-03, -1.8323e-04,  5.3375e-02,  ...,  4.5166e-04,\n",
+              "          5.4484e-02,  9.7125e-03],\n",
+              "        ...,\n",
+              "        [ 2.2250e-03,  2.2138e-04,  4.4385e-02,  ..., -3.9766e-03,\n",
+              "         -7.9449e-04,  2.2444e-02],\n",
+              "        [-2.2455e-03,  9.7196e-04,  3.4624e-02,  ..., -7.1559e-05,\n",
+              "          1.2647e-02,  1.3210e-02],\n",
+              "        [ 1.0997e-03,  8.4726e-05,  1.5534e-01,  ..., -1.5738e-04,\n",
+              "          9.5801e-04,  5.3785e-03]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "get_embeddings(flair_emb, watch2)"
+      ],
+      "metadata": {
+        "id": "4j60pPfd_XFQ",
+        "outputId": "29182798-315a-4fc9-91e0-c2c67d55e573",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 1.2328e-03, -1.6353e-03,  1.0852e-01,  ..., -3.3656e-05,\n",
+              "          6.3374e-03,  1.8162e-01],\n",
+              "        [-3.3229e-04, -9.9625e-04,  5.9311e-02,  ..., -5.4689e-04,\n",
+              "          3.2166e-04,  2.4364e-03],\n",
+              "        [-1.3625e-02,  2.4192e-05,  1.8871e-02,  ...,  6.3698e-04,\n",
+              "          3.1255e-03,  4.0854e-02],\n",
+              "        ...,\n",
+              "        [ 1.3953e-04, -1.4613e-04,  6.0689e-02,  ..., -5.8437e-03,\n",
+              "         -4.5849e-03,  5.3478e-02],\n",
+              "        [-9.9871e-03,  1.0158e-04,  2.1744e-02,  ..., -1.8228e-03,\n",
+              "          1.3294e-03,  1.3623e-02],\n",
+              "        [ 1.2045e-03,  8.6513e-07,  6.7963e-03,  ..., -8.1871e-05,\n",
+              "          2.1393e-03,  8.9121e-03]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##BERT"
+      ],
+      "metadata": {
+        "id": "EwrF82sIBCIu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "EFAXb6_UBDKf"
       },
       "execution_count": null,
       "outputs": []
