--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/08_contextual_word_embeddings.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/08_contextual_word_embeddings.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMfRYqTTAiSJukl4hol23i7",
+      "authorship_tag": "ABX9TyOD3XkjyOlcZ8XigIBrvjef",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1504,7 +1504,7 @@
       ],
       "metadata": {
         "id": "4KaJRDNLmTq_",
-        "outputId": "23219d62-cce7-45ca-abef-77cc5471ed0a",
+        "outputId": "ef105ee6-5887-4caf-a899-9e008aa56eb4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1556,7 +1556,7 @@
       "metadata": {
         "id": "i9pPl_87mbqd"
       },
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -1565,10 +1565,33 @@
         "nltk.download('punkt')"
       ],
       "metadata": {
-        "id": "lrnHpAEYgrSS"
+        "id": "lrnHpAEYgrSS",
+        "outputId": "83f3e338-2a7e-4db0-bd4a-22622ea1ded8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2791,7 +2814,7 @@
       "metadata": {
         "id": "xrdcDyHI4A5c"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -2802,12 +2825,12 @@
       ],
       "metadata": {
         "id": "xRufQS7K5tdt",
-        "outputId": "3d450c10-535a-408e-c722-0a9a94bc6486",
+        "outputId": "248c5109-d5cc-477c-95b6-85551c2eafa3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2817,7 +2840,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -2828,7 +2851,7 @@
       ],
       "metadata": {
         "id": "MBAgtwTw6BzN",
-        "outputId": "68a679c3-2e1c-44f3-8e54-05a1275dc18b",
+        "outputId": "edb7449b-691a-4936-c711-edd5385ede27",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2854,12 +2877,12 @@
       ],
       "metadata": {
         "id": "YDFP5A316JdD",
-        "outputId": "4bd0f54e-fad4-43c3-8da3-f9c96c0a68bc",
+        "outputId": "a1cddd28-d397-48ad-dcf4-0655e54a35c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2869,7 +2892,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 9
         }
       ]
     },
@@ -2880,10 +2903,50 @@
         "flair_emb = FlairEmbeddings(\"news-forward\")"
       ],
       "metadata": {
-        "id": "WnKgpKXj6dwX"
+        "id": "WnKgpKXj6dwX",
+        "outputId": "88daf64d-be3d-49f8-f379-1cfa8387a6c0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2023-11-22 05:44:45,102 https://flair.informatik.hu-berlin.de/resources/embeddings/flair/news-forward-0.4.1.pt not found in cache, downloading to /tmp/tmpjxwlhsrq\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 69.7M/69.7M [00:07<00:00, 10.1MB/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2023-11-22 05:44:53,470 copying /tmp/tmpjxwlhsrq to cache at /root/.flair/embeddings/news-forward-0.4.1.pt\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2023-11-22 05:44:53,664 removing temp file /tmp/tmpjxwlhsrq\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2892,12 +2955,12 @@
       ],
       "metadata": {
         "id": "hzgbyQCH8KGi",
-        "outputId": "38cde176-68b0-4be2-9f26-6ad0bfc0ec35",
+        "outputId": "34c220b5-65a3-4691-f892-2de41543535e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2908,7 +2971,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 11
         }
       ]
     },
@@ -2923,12 +2986,12 @@
       ],
       "metadata": {
         "id": "rUEObLcU8Spo",
-        "outputId": "0b6ef9a6-28d2-4268-87c0-6698e4eb0ee6",
+        "outputId": "aed82656-8fbe-4aa7-e76a-036ed9c04a08",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2938,7 +3001,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 12
         }
       ]
     },
@@ -2949,12 +3012,12 @@
       ],
       "metadata": {
         "id": "eoEafKUO8lQb",
-        "outputId": "156ab0d4-e3a9-4469-c31d-684fa69a191b",
+        "outputId": "0eb203e0-2ede-483e-b2e9-2e3719aa5f6b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2965,7 +3028,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 13
         }
       ]
     },
@@ -2978,12 +3041,12 @@
       ],
       "metadata": {
         "id": "ByK-Ku4780Y7",
-        "outputId": "95d1360e-d437-40a7-c0a3-8b62c3d7f3ab",
+        "outputId": "e570eae3-82c5-497b-ebf2-81e0e4330cd2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2993,7 +3056,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 14
         }
       ]
     },
@@ -3020,7 +3083,7 @@
       "metadata": {
         "id": "5XoOAGWj-2LQ"
       },
-      "execution_count": 19,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -3030,12 +3093,12 @@
       ],
       "metadata": {
         "id": "9cgU7k9C_NBQ",
-        "outputId": "d96d41d8-56a6-4ab2-d38c-50aa972aa9c5",
+        "outputId": "1b2ba411-d036-41f2-c884-55508e763f3a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3057,7 +3120,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 16
         }
       ]
     },
@@ -3068,12 +3131,12 @@
       ],
       "metadata": {
         "id": "4j60pPfd_XFQ",
-        "outputId": "29182798-315a-4fc9-91e0-c2c67d55e573",
+        "outputId": "bc50fb4e-a441-467f-979a-0265ef1075d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3095,7 +3158,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 17
         }
       ]
     },
@@ -3109,10 +3172,145 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The general idea of obtaining contextual word embeddings\n",
+        "using a language model still holds true for BERT.\n",
+        "\n",
+        "First, we need to load BERT in flair using `TransformerWordEmbeddings`:"
+      ],
+      "metadata": {
+        "id": "fbjVEkT4jBZT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bert_flair = TransformerWordEmbeddings()"
+      ],
+      "metadata": {
+        "id": "EFAXb6_UBDKf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "embedding1 = get_embeddings(bert_flair, watch1)\n",
+        "embedding2 = get_embeddings(bert_flair, watch2)"
+      ],
+      "metadata": {
+        "id": "ErE13Df1jctD"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bert_watch1 = embedding1[31]\n",
+        "bert_watch1[:5]"
+      ],
+      "metadata": {
+        "id": "I51kUOjkj6K8",
+        "outputId": "55b046c9-c8d9-40c1-eaad-7541b4e667b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 0.8576,  0.3589, -0.3782, -0.8356,  1.3528])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bert_watch2 = embedding2[13]\n",
+        "bert_watch2[:5]"
+      ],
+      "metadata": {
+        "id": "7d0rJOyBj-l1",
+        "outputId": "d8ea431b-bbdd-4081-e80d-ddf89b9d499a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([-0.0984,  1.4698,  0.2857, -0.3957,  0.0969])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Then, let’s compare the embeddings for the word \"watch\" in both sentences once\n",
+        "again:"
+      ],
+      "metadata": {
+        "id": "kq7VGUE_kUKY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "similarity = nn.CosineSimilarity(dim=0, eps=1e-6)\n",
+        "similarity(bert_watch1, bert_watch2)"
+      ],
+      "metadata": {
+        "id": "QvjzPuuOkUrP",
+        "outputId": "5a30bd39-bf07-4e40-a2c3-66737a7dc07c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0.3504)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Document Embeddings"
+      ],
+      "metadata": {
+        "id": "LK1ZJSyek_47"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "EFAXb6_UBDKf"
+        "id": "tpkJDDlJkIVl"
       },
       "execution_count": null,
       "outputs": []
